src/main/java/com/example/tokenauth/errors/InvalidTokenException.java
package com.example.tokenauth.errors;

public class InvalidTokenException extends RuntimeException {
    public InvalidTokenException(String token) {
        super(token);
    }
}
